--- a/tp1/index.html
+++ b/tp1/index.html
@@ -9,27 +9,97 @@
 
     <link rel="apple-touch-icon" href="apple-touch-icon.png" />
     <!-- Place favicon.ico in the root directory -->
-
-    <style>
-      body {
-        background-color: #e9ebee;
-        font-family: system, -apple-system, ".SFNSText-Regular", "San Francisco", "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", sans-serif;
-        font-size: 16px;
-        margin: 0 auto;
-        max-width: 800px;
-      }
-    </style>
-
-    <!-- Code à dé-commenter si besoin de fichier CSS ou JS -->
-    <!--<link rel="stylesheet" href="style.css">-->
-    <!--<script src="main.js"></script>-->
-  </head>
+    <link rel="stylesheet" href="css/main.css" /> 
+   </head>
   <body>
-    <h1>TP 1</h1>
-    <!-- Add your site or application content here -->
-    <p>Hello world! This is HTML5 Boilerplate.</p>
-    <img src="../galilee.png" alt="Logo Galilee" />
+    <div>
+      <h1 class="titles">curriculum vitae</h1>
+      <table >
+        <tr>
+          <td> Mohammed Walid OUGHERB</td>
+          <td>célibataire</td>          
+        </tr>
+        <tr>
+          <td> 93 villetaneuse</td>
+          <td>Permis B</td>          
+        </tr>
+        <tr>
+          <td> 07XXXXXXXXX</td>
+          <td>mohammedwalid.ougherb@edu.univ-paris13.fr</td>          
+        </tr>
+      </table>
 
-    <h2><a href="experiences/index.html">Expériences</a></h2>
+    <h1 class="titles">Ingénieur Devops et Cloud</h1>
+
+    <h1 class="">Formations :</h1>
+    <table>
+      <tr>
+        <td class="point"> 2021-2022</td>
+        <td><a href="formations.html#a">Master 2</a> ingénierie et innovation en images et réseaux option réseaux</td>          
+      </tr>
+      <tr>
+        <td class="point"> 2016-2021</td>
+        <td><a href="formations.html#b">Ingénieur</a> en télécommunications et TIC option informatique et réseaux</td>        
+      </tr>
+      <tr>
+        <td class="point"> 2016 </td>
+        <td>BAC série scientifique</td>          
+      </tr>
+    </table>
+
+    <h1 class="">Compétences :</h1>
+    <table>
+      <tr>
+        <td class="point"> Devops</td>
+        <td>Ansible, Docker, K8S, Git, Gitlab CICD, Terraform, heat</td>          
+      </tr>
+      <tr>
+        <td class="point"> Cloud</td>
+        <td>Azure, AWS, Openstack</td>        
+      </tr>
+      <tr>
+        <td class="point"> Administration réseaux et système </td>
+        <td>Linux, Cisco, Huawei</td>          
+      </tr>
+      <tr>
+        <td class="point"> Virtualisation</td>
+        <td>KVM, Virtualbox, VMware workstation</td>        
+      </tr>
+      <tr>
+        <td class="point"> Dev Web et SGBD</td>
+        <td>HTML/CSS, JS, PHP, ReactJS, ExpressJS, Bootstrap, Mysql</td>        
+      </tr>
+      <tr>
+        <td class="point"> Soft Skilss</td>
+        <td>Communication, Adaptabilité, gestion d'équipe, public speaking</td>        
+      </tr>
+    </table>
+
+    <h1 class="">Expériences :</h1>
+    <table >
+      <tr>
+        <td class="point">Janvier 2021- Juillet 2022</td>
+        <td><a href="experiences.html#a">stage : Ingénieur telco cloud</a></td>          
+      </tr>
+      <tr>
+        <td class="point"> Decembre 2018 - Janvier 2019</td>
+        <td><a href="experiences.html#b">stage : optimisation SEO</a></td>        
+      </tr>
+    </table>
+
+    <h1 class="">Centres d'intérêt  :</h1>
+    <table >
+      <tr>
+        <td class="point">Responsable Workshop à Horizon Club</td>
+        <td>Team leader / Membre chez AIESEC </td>   
+        <td class="point">Animation de Workshopsr</td>       
+      </tr>
+      <tr>
+        <td class="point">Microsoft Learn Student Ambassador</td>
+        <td> Participation à un échange culturel en Egypte</td>    
+        <td class="point">Sport</td>    
+      </tr>
+    </table>
+  </div>    
   </body>
 </html>
