--- a/tp1/index.html
+++ b/tp1/index.html
@@ -1,105 +1,128 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>TP1</title>
-    <meta name="description" content="" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <link rel="apple-touch-icon" href="apple-touch-icon.png" />
-    <!-- Place favicon.ico in the root directory -->
-    <link rel="stylesheet" href="css/main.css" /> 
-   </head>
-  <body>
-    <div>
-      <h1 class="titles">curriculum vitae</h1>
-      <table >
-        <tr>
-          <td> Mohammed Walid OUGHERB</td>
-          <td>célibataire</td>          
-        </tr>
-        <tr>
-          <td> 93 villetaneuse</td>
-          <td>Permis B</td>          
-        </tr>
-        <tr>
-          <td> 07XXXXXXXXX</td>
-          <td>mohammedwalid.ougherb@edu.univ-paris13.fr</td>          
-        </tr>
-      </table>
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="x-ua-compatible" content="ie=edge" />
+  <title>TP1</title>
+  <meta name="description" content="" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <h1 class="titles">Ingénieur Devops et Cloud</h1>
+  <link rel="apple-touch-icon" href="apple-touch-icon.png" />
+  <!-- Place favicon.ico in the root directory -->
+  <link rel="stylesheet" href="css/main.css" />
+</head>
 
-    <h1 class="">Formations :</h1>
-    <table>
-      <tr>
-        <td class="point"> 2021-2022</td>
-        <td><a href="formations.html#a">Master 2</a> ingénierie et innovation en images et réseaux option réseaux</td>          
-      </tr>
-      <tr>
-        <td class="point"> 2016-2021</td>
-        <td><a href="formations.html#b">Ingénieur</a> en télécommunications et TIC option informatique et réseaux</td>        
-      </tr>
-      <tr>
-        <td class="point"> 2016 </td>
-        <td>BAC série scientifique</td>          
-      </tr>
-    </table>
+<body>
+  <div>
+    <div id="header">
+      <img src="images/image" alt="image">
+     <div >
+      <h3 >Mohammed Walid OUGHERB</h3>
+      <h5 >Ingénieur Devops et Cloud</h5>
+      <pre >
+07XXXXXXXXX 
+<a href="mailto:mohammedwalid.ougherb@edu.univ-paris13.fr">mohammedwalid.ougherb@edu.univ-paris13.fr</a>
+Permis B
+      </pre>
+    </div>
+    </div>
+    
+      <div style="display: flex;">
+         <div class="content-title">    <h1 class="titles"><a href="formations.html">Formations</a> :</h1>         </div>
+         <div class="content">
+                   <ul>
+                     <li>
+                       <h3><a href="https://www.univ-paris13.fr/">Master 2</a> ingénierie et innovation en images et réseaux option réseaux</h3>
+                       <h4>Université sorbonne Paris nord <br> 2021 - 2022</h4>
+                     </li>
+                     <li>
+                      <h3><a href="https://www.inttic.dz/">Ingénieur</a> en télécommunications et TIC option informatique et réseaux</h3>
+                      <h4>INTTIC <br> 2016 - 2021</h4>
+                    </li>
+                    <li>
+                      <h3>Ingénieur en télécommunications et TIC option informatique et réseaux</h3>
+                      <h4>2016</h4>
+                    </li>
+                   </ul>
+         </div>
+      </div>
 
-    <h1 class="">Compétences :</h1>
-    <table>
-      <tr>
-        <td class="point"> Devops</td>
-        <td>Ansible, Docker, K8S, Git, Gitlab CICD, Terraform, heat</td>          
-      </tr>
-      <tr>
-        <td class="point"> Cloud</td>
-        <td>Azure, AWS, Openstack</td>        
-      </tr>
-      <tr>
-        <td class="point"> Administration réseaux et système </td>
-        <td>Linux, Cisco, Huawei</td>          
-      </tr>
-      <tr>
-        <td class="point"> Virtualisation</td>
-        <td>KVM, Virtualbox, VMware workstation</td>        
-      </tr>
-      <tr>
-        <td class="point"> Dev Web et SGBD</td>
-        <td>HTML/CSS, JS, PHP, ReactJS, ExpressJS, Bootstrap, Mysql</td>        
-      </tr>
-      <tr>
-        <td class="point"> Soft Skilss</td>
-        <td>Communication, Adaptabilité, gestion d'équipe, public speaking</td>        
-      </tr>
-    </table>
+      <div style="display: flex; margin-top: 30px;">
+        <div class="content-title">    <h1 class="titles">Compétences :</h1>         </div>
+        <div class="content">
+                  <ul>
+                    <li>
+                      <h3>Devops</h3>
+                      <h4>Ansible, Docker, K8S, Git, Gitlab CICD, Terraform, heat</h4>
+                    </li>
+                    <li>
+                     <h3>Cloud</h3>
+                     <h4>Azure, AWS, Openstack</h4>
+                   </li>
+                   <li>
+                     <h3>Administration réseaux et système</h3>
+                     <h4>Linux, Cisco, Huawei</h4>
+                   </li>
+                   <li>
+                    <h3>Virtualisation</h3>
+                    <h4>KVM, Virtualbox, VMware workstation</h4>
+                  </li>
+                  <li>
+                    <h3>Dev Web et SGBD</h3>
+                    <h4>HTML/CSS, JS, PHP, ReactJS, ExpressJS, Bootstrap, Mysql</h4>
+                  </li>
+                  <li>
+                    <h3>Soft Skils</h3>
+                    <h4>Communication, Adaptabilité, gestion d'équipe, public speaking</h4>
+                  </li>
+                  </ul>
+        </div>
+     </div>
+    
+     <div style="display: flex; margin-top: 30px;">
+      <div class="content-title">    <h1 class="titles"><a href="experiences.html">Expériences</a> :</h1>         </div>
+      <div class="content">
+        <ul>
+          <li>
+            <h3>stage : Ingénieur telco cloud</h3>
+            <h4>LabLabee <br> Janvier 2021- Juillet 2022</h4>
+          </li>
+          <li>
+           <h3>stage : optimisation SEO</h3>
+           <h4>Quizzito <br> Decembre 2018 - Janvier 2019</h4>
+         </li>
+        </ul>
+      </div>
+   </div>
 
-    <h1 class="">Expériences :</h1>
-    <table >
-      <tr>
-        <td class="point">Janvier 2021- Juillet 2022</td>
-        <td><a href="experiences.html#a">stage : Ingénieur telco cloud</a></td>          
-      </tr>
-      <tr>
-        <td class="point"> Decembre 2018 - Janvier 2019</td>
-        <td><a href="experiences.html#b">stage : optimisation SEO</a></td>        
-      </tr>
-    </table>
+   <div style="display: flex; margin: 30px 0;">
+    <div class="content-title">    <h1 class="titles">Centres d'intérêt :</h1>         </div>
+    <div class="content">
+      <ul>
+        <li>
+          <h4>Responsable Workshop à Horizon Club</h4>
+        </li>
+        <li>
+         <h4>Team leader / Membre chez AIESEC</h4>
+       </li>
+       <li>
+        <h4>Animation de Workshopsr</h4>
+      </li>
+      <li>
+        <h4>Microsoft Learn Student Ambassador</h4>
+      </li>
+      <li>
+        <h4>Participation à un échange culturel en Egypte</h4>
+      </li>
+      <li>
+        <h4>Sport</h4>
+      </li>
+      </ul>
+    </div>
+ </div>
 
-    <h1 class="">Centres d'intérêt  :</h1>
-    <table >
-      <tr>
-        <td class="point">Responsable Workshop à Horizon Club</td>
-        <td>Team leader / Membre chez AIESEC </td>   
-        <td class="point">Animation de Workshopsr</td>       
-      </tr>
-      <tr>
-        <td class="point">Microsoft Learn Student Ambassador</td>
-        <td> Participation à un échange culturel en Egypte</td>    
-        <td class="point">Sport</td>    
-      </tr>
-    </table>
-  </div>    
-  </body>
+  </div>
+</body>
+
 </html>
