--- a/tp5/index.html
+++ b/tp5/index.html
@@ -1,33 +1,115 @@
 <!doctype html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>TP5</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
-        <!-- Place favicon.ico in the root directory -->
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>TP5</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <style>
-          body{
-              background-color: #e9ebee;              
-              font-family: system, -apple-system, ".SFNSText-Regular", "San Francisco", "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", sans-serif;
-              font-size: 16px;
-              margin: 0 auto;
-              max-width: 800px;              
-          }
-        </style>
-        
-        <!-- Code à dé-commenter si besoin de fichier CSS ou JS -->
-        <!--<link rel="stylesheet" href="style.css">-->
-        <!--<script src="main.js"></script>-->
-    </head>
-    <body>        
-        <h1>TP5</h1>
-        <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <img src="../galilee.png" alt="Logo Galilee"/>
-    </body>
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+    <!-- Place favicon.ico in the root directory -->
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+        crossorigin="anonymous"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
+
+
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/weather-icons.min.css">
+    <script src="js/main.js"></script>
+</head>
+
+<body>
+    <h1>TP5</h1>
+    <div id="weatherApp">
+        <form v-on:submit="addCity">
+            <div class="input-group">
+                <input type="search" class="form-control" v-model="formCityName" placeholder="Search for..."
+                    aria-label="Search for..." autofocus required>
+                <span class="input-group-btn">
+                    <button class="btn btn-primary" type="submit">Go!</button>
+                </span>
+            </div>
+
+            <!-- affichage de nombre de caractères saisie -->
+            <small class="text-muted">
+                {{formCityName.length}} car.
+            </small>
+
+            <div class="alert alert-danger" role="alert" v-if='messageForm != ""'>
+                {{messageForm}}
+            </div>
+        </form>
+
+        <h4>Liste des villes ({{cityList.length}})</h4>
+        <ul class="list-group">
+            <a v-for="city in cityList" v-on:click="meteo(city)"
+                class="list-group-item d-flex justify-content-between align-items-center">
+                {{city.name}}
+                <button v-on:click="removeCityButton=true; remove(city)"  class="btn btn-secondary btn-sm"
+                    title="Supprimer de la liste">&times;</button>
+            </a>
+        </ul>
+
+        <div class="alert alert-primary" role="alert" v-if="cityList.length==0">
+            Aucune ville de saisie!
+        </div>
+
+
+
+        <div v-if="cityWeatherLoading"> Chargement de la météo...</div>
+
+        <div v-if="cityWeather">
+
+            <div class="card" style="width: 18rem;" v-if="cityWeather && openCard">
+                <div class="card-header">
+                    {{cityWeather.name}}
+                </div>
+                <img class="card-img-top" v-bind:src="'https://maps.googleapis.com/maps/api/staticmap?markers='+cityWeather.coord.lat+','+cityWeather.coord.lon+'&zoom=5&size=400x300&scale=2&key=AIzaSyAkmvI9DazzG9p77IShsz_Di7-5Qn7zkcg'" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">
+                        <i v-bind:class="'wi wi-owm-day-'+cityWeather.weather[0].id"></i>
+                        {{cityWeather.main.temp}}<i class="wi wi-celsius"></i>
+                    </h5>
+                    <p class="card-text">{{cityWeather.weather[0].description}}</p>
+                </div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">
+                        <i class="wi wi-cloud"></i> Nuage: {{cityWeather.clouds.all}}%
+                    </li>
+                    <li class="list-group-item">
+                        <i class="wi wi-humidity"></i> Humidité: {{cityWeather.main.humidity}}%
+                    </li>
+                    <li class="list-group-item">
+                        <i class="wi wi-windy"></i> Vent: {{cityWeather.wind.speed}} km/h
+                    </li>
+                    <li class="list-group-item">
+                        <i class="wi wi-sunrise"></i>
+                        Levé du soleil:
+                        {{new Date(cityWeather.sys.sunrise * 1000).toLocaleTimeString()}}
+                    </li>
+                    <li class="list-group-item">
+                        <i class="wi wi-sunset"></i>
+                        Couché du soleil:
+                        {{new Date(cityWeather.sys.sunset * 1000).toLocaleTimeString()}}
+                    </li>
+                </ul>
+
+            </div>
+        </div>
+    </div>
+</body>
+
 </html>
